src/test/ui/parser/issue-14303-impl.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-impl.rs:15:13
   |
LL | impl<'a, T, 'b> X {}
   |             ^^

error: aborting due to previous error

